# UraniumLE

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  FUNDING.yml  README.md  SECURITY.md  conandata.yml  conanfile.py  debug.html  requirements.txt
.github/workflows/: conan-package.yml  process-pull-request.yml  unit-test-post.yml  unit-test.yml  update-fork.yml  update-translation.yml
UM/: Application.py  ConfigurationErrorMessage.py  Controller.py  Logger.py  Message.py  PackageManager.py  PluginRegistry.py  Preferences.py  Resources.py  VersionUpgradeManager.py
UM/Backend/: Backend.py  SignalSocket.py
UM/FileHandler/: FileHandler.py
UM/Math/: Matrix.py  Polygon.py
UM/Mesh/: MeshData.py
UM/Operations/: RotateOperation.py  ScaleToBoundsOperation.py  SetTransformOperation.py  ToBuildPlateOperation.py
UM/Qt/: Duration.py  QtApplication.py
UM/Qt/Bindings/: MainWindow.py  MeshFileHandlerProxy.py  SceneProxy.py  SelectionProxy.py  TableModel.py  Theme.py  VisibleMessagesModel.py  i18nCatalogProxy.py
UM/Qt/qml/UM/: Label.qml  MessageStack.qml  RecolorImage.qml  StatusIcon.qml  qmldir
UM/Qt/qml/UM/Preferences/: MachinesPage.qml  ManagementPage.qml  PreferencesDialog.qml
UM/Scene/: Plane.py  Platform.py  SceneNode.py  Selection.py  Toolhead.py
UM/Settings/: DefinitionContainer.py  InstanceContainer.py  SettingDefinition.py  SettingFunction.py  SettingInstance.py
UM/Settings/Models/: SettingPropertyProvider.py
UM/View/GL/: OpenGL.py  OpenGLContext.py  ShaderProgram.py
plugins/FileHandlers/STLReader/: STLReader.py
plugins/LocalContainerProvider/: LocalContainerProvider.py
plugins/LocalFileOutputDevice/: LocalFileOutputDevice.py  LocalFileOutputDevicePlugin.py
plugins/Tools/CameraTool/: CameraTool.py
plugins/Tools/RotateTool/: RotateTool.py  RotateTool.qml
plugins/Tools/ScaleTool/: ScaleTool.py  ScaleTool.qml
plugins/Tools/TranslateTool/: TranslateTool.py  TranslateTool.qml
plugins/UpdateChecker/: NoNewUpdateMessage.py  UpdateChecker.py
resources/i18n/: uranium.pot
resources/i18n/de/: uranium.po
resources/i18n/en/: uranium.po
resources/i18n/es/: uranium.po
resources/i18n/fi/: uranium.po
resources/i18n/fr/: uranium.po
resources/i18n/hu/: uranium.po
resources/i18n/it/: uranium.po
resources/i18n/nl/: uranium.po
resources/i18n/pl/: uranium.po
resources/i18n/ptbr/: uranium.po
resources/i18n/ru/: uranium.po
resources/i18n/tr/: uranium.po
resources/shaders/: object.shader  platform_axis_block.shader
test_package/: conanfile.py
tests/: TestBackend.py
